달력+셀렉박스 수정

--- a/vue/src/assets/lms-css/common.css
+++ b/vue/src/assets/lms-css/common.css
@@ -139,6 +139,11 @@ main .inner {
   display: inline-block;
 }
 
+.inline-t {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .inline-m {
   display: inline-block;
   vertical-align: sub;
