--- a/vue/src/assets/lms-scss/common.scss
+++ b/vue/src/assets/lms-scss/common.scss
@@ -143,6 +143,11 @@ main .inner {
   display: inline-block;
 }
 
+.inline-t {
+  display: inline-block;
+  vertical-align: top;
+}
+
 .inline-m {
   display: inline-block;
   vertical-align: sub;
