--- a/vue/src/assets/lms-css/common.css
+++ b/vue/src/assets/lms-css/common.css
@@ -215,4 +215,20 @@ main .inner {
   margin-bottom: 1rem;
 }
 
+.mgr20 {
+  margin-right: 2rem;
+}
+
+.mgl20 {
+  margin-left: 2rem;
+}
+
+.mgt20 {
+  margin-top: 2rem;
+}
+
+.mgb20 {
+  margin-bottom: 2rem;
+}
+
 /*# sourceMappingURL=common.css.map */
