--- a/vue/src/assets/lms-scss/common.scss
+++ b/vue/src/assets/lms-scss/common.scss
@@ -197,7 +197,13 @@ main .inner {
 
 .cl1 {color:$cl1;} 
 .w100 {width:100%;}
+
 .mgr10 {margin-right:1rem;}
 .mgl10 {margin-left:1rem;}
 .mgt10 {margin-top:1rem;}
 .mgb10 {margin-bottom:1rem;}
+
+.mgr20 {margin-right:2rem;}
+.mgl20 {margin-left:2rem;}
+.mgt20 {margin-top:2rem;}
+.mgb20 {margin-bottom:2rem;}
