--- a/vue/src/assets/lms-css/style.css
+++ b/vue/src/assets/lms-css/style.css
@@ -1,3 +1,83 @@
+.mgr10 {
+  margin-right: 1rem;
+}
+
+.mgl10 {
+  margin-left: 1rem;
+}
+
+.mgt10 {
+  margin-top: 1rem;
+}
+
+.mgb10 {
+  margin-bottom: 1rem;
+}
+
+.mgr20 {
+  margin-right: 2rem;
+}
+
+.mgl20 {
+  margin-left: 2rem;
+}
+
+.mgt20 {
+  margin-top: 2rem;
+}
+
+.mgb20 {
+  margin-bottom: 2rem;
+}
+
+.mgr30 {
+  margin-right: 3rem;
+}
+
+.mgl30 {
+  margin-left: 3rem;
+}
+
+.mgt30 {
+  margin-top: 3rem;
+}
+
+.mgb30 {
+  margin-bottom: 3rem;
+}
+
+.mgr40 {
+  margin-right: 4rem;
+}
+
+.mgl40 {
+  margin-left: 4rem;
+}
+
+.mgt40 {
+  margin-top: 4rem;
+}
+
+.mgb40 {
+  margin-bottom: 4rem;
+}
+
+.mgr50 {
+  margin-right: 5rem;
+}
+
+.mgl50 {
+  margin-left: 5rem;
+}
+
+.mgt50 {
+  margin-top: 5rem;
+}
+
+.mgb50 {
+  margin-bottom: 5rem;
+}
+
 header .top {
   width: 100%;
   height: 8.8rem;
@@ -259,7 +339,6 @@ main .rad input:checked + i + span {
 }
 .board-box .search-type .item-date {
   display: none;
-  width: 28.3rem;
 }
 .board-box .search-type .item-date .dp__input {
   padding-left: 4.5rem;
@@ -297,6 +376,9 @@ main .rad input:checked + i + span {
 }
 .board-box .search-type.option-show .item-date {
   display: block;
+}
+.board-box .search-type input {
+  width: 26rem;
 }
 .board-box .search-txt {
   padding: 1rem 0;
