--- a/vue/src/assets/lms-scss/common.scss
+++ b/vue/src/assets/lms-scss/common.scss
@@ -1,43 +1,48 @@
 @import "variable";
 
-/* font */
-@font-face{
-  font-family:'Pretendard';
-  font-weight:100;
-  src:url('../lms-font/Pretendard-Thin.woff2') format('woff2')
+// Font
+$font-path: '../lms-font/';
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 100;
+  src: url('#{$font-path}Pretendard-Thin.woff2') format('woff2');
 }
-@font-face{
-  font-family:'Pretendard';
-  font-weight:300;
-  src:url('../lms-font/Pretendard-Light.woff2') format('woff2')
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 300;
+  src: url('#{$font-path}Pretendard-Light.woff2') format('woff2');
 }
+
 @font-face{
   font-family:'Pretendard';
   font-weight:400;
-  src:url('../lms-font/Pretendard-Regular.woff2') format('woff2')
+  src:url('#{$font-path}Pretendard-Regular.woff2') format('woff2')
 }
 @font-face{
   font-family:'Pretendard';
   font-weight:500;
-  src:url('../lms-font/Pretendard-Medium.woff2') format('woff2')
+  src:url('#{$font-path}Pretendard-Medium.woff2') format('woff2')
 }
 @font-face{
   font-family:'Pretendard';
   font-weight:600;
-  src:url('../lms-font/Pretendard-Bold.woff2') format('woff2')
+  src:url('#{$font-path}Pretendard-Bold.woff2') format('woff2')
 }
 @font-face{
   font-family:'Pretendard';
   font-weight:700;
-  src:url('../lms-font/Pretendard-ExtraBold.woff2') format('woff2')
+  src:url('#{$font-path}Pretendard-ExtraBold.woff2') format('woff2')
 }
 
 @font-face {
   font-family: 'Material Symbols Outlined';
   font-style: normal;
   font-weight: 400;
-  src: url('../lms-font/icon.woff2') format('woff2');
+  src: url('#{$font-path}icon.woff2') format('woff2');
 }
+
 .material-symbols-outlined {
   font-family: 'Material Symbols Outlined';
   font-size: 2.4rem;
@@ -52,25 +57,26 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
 }
-/* font */
 
 
 
 
-
+// Base styles
 html {
-  font-size: 10px ;
+  font-size: 10px;
   height: 100%;
 }
 
 body {
-  /*min-width:128rem; */
   height: 100%;
   overflow: auto;
-  font: 400 1.5rem/1 "Pretendard";  
+  font: 400 1.5rem/1 "Pretendard";
   background: #f0f5f9;
 }
-body * {letter-spacing:0;}
+
+body * {
+  letter-spacing: 0;
+}
 
 .wrap {
   height: 100%;
@@ -78,22 +84,14 @@ body * {letter-spacing:0;}
 }
 
 .inner {
-  width: 100%;  
+  width: 100%;
 }
 
 main .inner {
   max-width: 140rem;
-  width: 100%;
 }
 
-.blind {
-  font-size: 0;
-  line-height: 0;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
+// Utility classes
 .hidden {
   display: block;
   width: 0;
@@ -195,15 +193,5 @@ main .inner {
   display: grid;
 }
 
-.cl1 {color:$cl1;} 
-.w100 {width:100%;}
-
-.mgr10 {margin-right:1rem;}
-.mgl10 {margin-left:1rem;}
-.mgt10 {margin-top:1rem;}
-.mgb10 {margin-bottom:1rem;}
-
-.mgr20 {margin-right:2rem;}
-.mgl20 {margin-left:2rem;}
-.mgt20 {margin-top:2rem;}
-.mgb20 {margin-bottom:2rem;}
+.cl1 { color: $cl1; }
+.w100 { width: 100%; }
