--- a/vue/src/assets/lms-css/common.css
+++ b/vue/src/assets/lms-css/common.css
@@ -137,7 +137,7 @@ html {
 body {
   height: 100%;
   overflow: auto;
-  font: 400 1.5rem/1 "Pretendard";
+  font: 400 1.6rem/1 "Pretendard";
   background: #f0f5f9;
 }
 
@@ -219,6 +219,10 @@ main .inner {
 
 .block {
   display: block;
+}
+
+strong {
+  font-weight: 600;
 }
 
 *[class*=flex__], .flex {
