--- a/vue/src/assets/lms-css/style.css
+++ b/vue/src/assets/lms-css/style.css
@@ -121,7 +121,7 @@ header .top .t-menu li.logout {
 header .top .t-menu li.logout button {
   padding: 0.8rem 1.8rem;
   color: #111;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   font-weight: 500;
   background: #fff;
   border-radius: 0.5rem;
@@ -160,15 +160,20 @@ header .top .t-menu li.logout button {
   line-height: 1.5;
 }
 .container aside .ta .user strong {
-  font-size: 1.8rem;
+  font-size: 1.9rem;
 }
-.container aside #gnb li a {
+.container aside #gnb .accordion-item {
+  transition: all 0.2s ease;
+}
+.container aside #gnb .accordion-item a {
   display: block;
-  padding: 1.5rem 3.5rem 1.5rem 5rem;
-  font-size: 1.5rem;
+  padding: 1.5rem 2rem;
 }
-.container aside #gnb > ul > li > a {
-  padding-left: 3.5rem;
+.container aside #gnb .accordion-item .accordion-content {
+  transition: all 0.2s ease;
+}
+.container aside #gnb .accordion-item .accordion-content li a {
+  padding-left: 3rem;
 }
 
 main {
@@ -187,9 +192,8 @@ main section h1.tit {
 }
 main select, main input:not([type=radio]):not([type=checkbox]), main button {
   padding: 0 1.5rem;
-  height: 4rem;
-  font-size: 1.4rem;
-  line-height: 4rem;
+  height: 4.5rem;
+  line-height: 4.5rem;
   border: 0.1rem solid #eee;
   border-radius: 0.5rem;
 }
@@ -199,12 +203,24 @@ main button {
   background: #002844;
   line-height: 1;
 }
+main button.ty2 {
+  background: #fff;
+  border-color: #002844;
+  color: #004779;
+  font-weight: 500;
+}
+main button.ty3 {
+  background: #89f3d6;
+  border-color: #89f3d6;
+  color: #111;
+  font-weight: 500;
+}
 main select {
   position: relative;
   padding-right: 3.5rem;
   background: url("../lms-img/arrow.png") no-repeat right 1rem center;
 }
-main select.t2 {
+main select.ty2 {
   background-color: #f0f5f9;
 }
 main input[type=file] {
@@ -275,53 +291,17 @@ main .rad input:checked + i + span {
 .board-box table th {
   position: relative;
   padding: 2rem 0.5rem;
-  font-size: 1.6rem;
   font-weight: 600;
   color: #004779;
   border-bottom: 0.2rem solid #004779;
 }
 .board-box table td {
-  padding: 1.5rem 0.5rem;
+  padding: 2rem 0.5rem;
   border-bottom: 0.1rem solid #004779;
 }
-.board-box table td.tit {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-  font-size: 1.6rem;
-  font-weight: 500;
-}
-.board-box table td.tit a {
-  transition: all 0.2s ease;
-}
-.board-box table td.tit a:hover {
-  color: #004779;
-  text-decoration: underline;
-}
-.board-box table td.num {
-  font-size: 1.4rem;
-  color: #777;
-}
-.board-box table td.bold {
-  font-weight: 500;
-}
 .board-box table td button {
-  color: #fff;
-  height: 3rem;
-  border: 0.1rem solid #002844;
-  border-radius: 1.5rem;
-  background: #002844;
-}
-.board-box table td button.t2 {
-  background: #fff;
-  border-color: #002844;
-  color: #004779;
-  font-weight: 500;
-}
-.board-box table td button.t3 {
-  background: #89f3d6;
-  border-color: #89f3d6;
-  color: #111;
-  font-weight: 500;
+  height: 3.5rem;
+  border-radius: 1.75rem;
 }
 .board-box table td button.file-del {
   height: 2rem;
@@ -334,8 +314,34 @@ main .rad input:checked + i + span {
   font-size: 1.5rem;
   line-height: 1.9rem;
 }
+.board-box table td.tit {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  font-weight: 500;
+}
+.board-box table td.tit a {
+  transition: all 0.2s ease;
+}
+.board-box table td.tit a:hover {
+  color: #004779;
+  text-decoration: underline;
+}
+.board-box table td.num {
+  font-size: 1.5rem;
+  color: #777;
+}
+.board-box table td.bold {
+  font-weight: 500;
+}
 .board-box table td.empty {
   padding: 15rem 0;
+}
+.board-box textarea {
+  height: 20rem;
+  padding: 2rem;
+  line-height: 1.5;
+  border: 0.1rem solid #eee;
+  border-radius: 1rem;
 }
 .board-box .search-type .item-date {
   display: none;
@@ -343,6 +349,7 @@ main .rad input:checked + i + span {
 .board-box .search-type .item-date .dp__input {
   padding-left: 4.5rem;
   font-family: "Pretendard";
+  font-size: 1.6rem;
   color: #636363;
 }
 .board-box .search-type .item-date .dp__icon {
@@ -357,18 +364,19 @@ main .rad input:checked + i + span {
   padding: 0;
 }
 .board-box .search-type .item-date .dp__instance_calendar .dp__action_buttons button {
-  width: 5rem;
+  width: 4rem;
   padding: 0 !important;
   text-align: center;
   justify-content: center;
 }
 .board-box .search-type .item-date .dp__selection_preview {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   line-height: 1.2;
 }
 .board-box .search-type .item-date .dp__action_button {
   width: 5rem;
-  font-size: 1.2rem;
+  height: 3rem;
+  font-size: 1.5rem;
   justify-content: center;
 }
 .board-box .search-type.option-show > div {
@@ -378,7 +386,7 @@ main .rad input:checked + i + span {
   display: block;
 }
 .board-box .search-type input {
-  width: 26rem;
+  width: 27rem;
 }
 .board-box .search-txt {
   padding: 1rem 0;
@@ -395,11 +403,6 @@ main .rad input:checked + i + span {
 }
 .board-box .ea select, .board-box .ea button {
   min-width: 15rem;
-}
-.board-box .ea .t2 {
-  color: #002844;
-  background: #fff;
-  font-weight: 500;
 }
 .board-box.board-list th::before {
   content: "";
@@ -421,7 +424,7 @@ main .rad input:checked + i + span {
 }
 .board-box.board-list td button {
   padding: 0 1.5rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
 }
 .board-box.board-list .pagination {
   margin-top: 7rem;
@@ -434,7 +437,6 @@ main .rad input:checked + i + span {
   width: 3rem;
   padding: 0.5rem;
   font-weight: 500;
-  font-size: 1.6rem;
   line-height: 2.4rem;
   transition: all 0.2s ease;
 }
@@ -464,23 +466,23 @@ main .rad input:checked + i + span {
 .board-box.board-list .pagination .ar:hover {
   opacity: 1;
 }
-.board-box.board-write table {
+.board-box.board-write table, .board-box.board-answer table {
   border-top: 0.1rem solid #d1dbe1;
 }
-.board-box.board-write th, .board-box.board-write td {
+.board-box.board-write th, .board-box.board-write td, .board-box.board-answer th, .board-box.board-answer td {
   border-color: #d1dbe1;
 }
-.board-box.board-write th {
+.board-box.board-write th, .board-box.board-answer th {
   border-width: 0.1rem;
   background-color: #f7f8f9;
 }
-.board-box.board-write td {
+.board-box.board-write td, .board-box.board-answer td {
   padding: 1.5rem 2rem;
 }
-.board-box.board-write td .rad {
+.board-box.board-write td .rad, .board-box.board-answer td .rad {
   margin-right: 2.5rem;
 }
-.board-box.board-view .bv-tit, .board-box.board-view .bv-con {
+.board-box.board-view .bv-tit, .board-box.board-view .bv-con, .board-box.board-view .bv-ans {
   font-size: 1.8rem;
   line-height: 1.6;
   border-bottom: 0.1rem solid #d1dbe1;
@@ -492,10 +494,13 @@ main .rad input:checked + i + span {
   border-bottom: 0.1rem solid #d1dbe1;
 }
 .board-box.board-view .bv-tit {
-  padding-bottom: 3rem;
+  padding: 0 1.5rem 3rem;
 }
-.board-box.board-view .bv-tit h2 {
-  font-size: 2.5rem;
+.board-box.board-view .bv-tit h2, .board-box.board-view .bv-tit > p {
+  padding-bottom: 1rem;
+  font-size: 3rem;
+  font-weight: 500;
+  line-height: 1.3;
 }
 .board-box.board-view .bv-tit .t2 {
   margin-top: 0.5rem;
@@ -517,7 +522,7 @@ main .rad input:checked + i + span {
   display: none;
 }
 .board-box.board-view .bv-con {
-  padding: 6rem 0 12rem;
+  padding: 6rem 1.5rem 12rem;
 }
 .board-box.board-view .bv-list {
   margin-top: 10rem;
@@ -532,15 +537,43 @@ main .rad input:checked + i + span {
   height: 1.6rem;
   background: #ddd;
 }
+.board-box.board-view .bv-ans .tit {
+  padding: 1.5rem;
+  line-height: 2.4rem;
+  background: #f7f7f7;
+  border-bottom: 0.1rem solid #d1dbe1;
+}
+.board-box.board-view .bv-ans .tit button {
+  height: 3.5rem;
+  line-height: 3.5rem;
+  border-radius: 1.75rem;
+  border-color: #d1dbe1;
+  color: #002844;
+  font-size: 1.6rem;
+}
+.board-box.board-view .bv-ans > div {
+  padding: 6rem 1.5rem;
+}
+.board-box.board-view .bv-textarea {
+  height: 20rem;
+  font-size: 1.8rem;
+}
+.board-box.board-view .bv-textarea textarea {
+  width: calc(100% - 11.5rem);
+  height: 100%;
+}
+.board-box.board-view .bv-textarea button {
+  width: 10rem;
+  height: 100%;
+  font-size: 1.7rem;
+}
 
 .popup {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
 }
