--- a/vue/src/assets/lms-scss/common.scss
+++ b/vue/src/assets/lms-scss/common.scss
@@ -70,7 +70,7 @@ html {
 body {
   height: 100%;
   overflow: auto;
-  font: 400 1.5rem/1 "Pretendard";
+  font: 400 1.6rem/1 "Pretendard";
   background: #f0f5f9;
 }
 
@@ -153,6 +153,10 @@ main .inner {
 
 .block {
   display: block;
+}
+
+strong { 
+  font-weight: 600;
 }
 
 *[class*=flex__], .flex {
