--- a/vue/src/assets/lms-css/common.css
+++ b/vue/src/assets/lms-css/common.css
@@ -1,83 +1,3 @@
-.mgr10 {
-  margin-right: 1rem;
-}
-
-.mgl10 {
-  margin-left: 1rem;
-}
-
-.mgt10 {
-  margin-top: 1rem;
-}
-
-.mgb10 {
-  margin-bottom: 1rem;
-}
-
-.mgr20 {
-  margin-right: 2rem;
-}
-
-.mgl20 {
-  margin-left: 2rem;
-}
-
-.mgt20 {
-  margin-top: 2rem;
-}
-
-.mgb20 {
-  margin-bottom: 2rem;
-}
-
-.mgr30 {
-  margin-right: 3rem;
-}
-
-.mgl30 {
-  margin-left: 3rem;
-}
-
-.mgt30 {
-  margin-top: 3rem;
-}
-
-.mgb30 {
-  margin-bottom: 3rem;
-}
-
-.mgr40 {
-  margin-right: 4rem;
-}
-
-.mgl40 {
-  margin-left: 4rem;
-}
-
-.mgt40 {
-  margin-top: 4rem;
-}
-
-.mgb40 {
-  margin-bottom: 4rem;
-}
-
-.mgr50 {
-  margin-right: 5rem;
-}
-
-.mgl50 {
-  margin-left: 5rem;
-}
-
-.mgt50 {
-  margin-top: 5rem;
-}
-
-.mgb50 {
-  margin-bottom: 5rem;
-}
-
 @font-face {
   font-family: "Pretendard";
   font-weight: 100;
@@ -138,7 +58,6 @@ body {
   height: 100%;
   overflow: auto;
   font: 400 1.6rem/1 "Pretendard";
-  background: #f0f5f9;
 }
 
 body * {
@@ -263,8 +182,88 @@ strong {
   display: grid;
 }
 
+.mgr10 {
+  margin-right: 1rem;
+}
+
+.mgl10 {
+  margin-left: 1rem;
+}
+
+.mgt10 {
+  margin-top: 1rem;
+}
+
+.mgb10 {
+  margin-bottom: 1rem;
+}
+
+.mgr20 {
+  margin-right: 2rem;
+}
+
+.mgl20 {
+  margin-left: 2rem;
+}
+
+.mgt20 {
+  margin-top: 2rem;
+}
+
+.mgb20 {
+  margin-bottom: 2rem;
+}
+
+.mgr30 {
+  margin-right: 3rem;
+}
+
+.mgl30 {
+  margin-left: 3rem;
+}
+
+.mgt30 {
+  margin-top: 3rem;
+}
+
+.mgb30 {
+  margin-bottom: 3rem;
+}
+
+.mgr40 {
+  margin-right: 4rem;
+}
+
+.mgl40 {
+  margin-left: 4rem;
+}
+
+.mgt40 {
+  margin-top: 4rem;
+}
+
+.mgb40 {
+  margin-bottom: 4rem;
+}
+
+.mgr50 {
+  margin-right: 5rem;
+}
+
+.mgl50 {
+  margin-left: 5rem;
+}
+
+.mgt50 {
+  margin-top: 5rem;
+}
+
+.mgb50 {
+  margin-bottom: 5rem;
+}
+
 .cl1 {
-  color: #004779;
+  color: #1d3f7f;
 }
 
 .w100 {
